# my-feed-tracking

./: .gitignore  CRUD.http  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
mft-analytics/: .gitignore  README.md  requirements.txt
mft-analytics/mft_dbt/: README.md  dbt_project.yml
mft-analytics/mft_dbt/conf/: .user.yml  profiles.yml
mft-analytics/mft_dbt/models/ingest/: feeling.sql  feeling_2_user.sql  source.yaml  user.sql
mft-analytics/mft_streamlit/: feeling_overview.py
mft-api/: .gitignore  Cargo.toml  Dockerfile  README.md
mft-api/.cargo/: config.toml
mft-api/examples/: quick_dev.rs
mft-api/migrations/: 20230731220243_migrations.down.sql  20230731220243_migrations.up.sql
mft-api/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
mft-api/src/: config.rs  main.rs  main1.rs1
mft-api/src/_dev_utils/: dev_db.rs  mod.rs
mft-api/src/crypt/: pwd.rs
mft-api/src/model/: base.rs  feeling.rs  ingredient.rs  mod.rs  user.rs
mft-api/src/web/: routes_login.rs
mft-api/src/web/rpc/: feeling_rpc.rs  ingredient_rpc.rs  mod.rs
mft-api/tests/: quick_dev.rs
mft-domain/: Cargo.toml
mft-domain/src/: lib.rs  user.rs
mft-web-ui/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
mft-web-ui-next/: package-lock.json  package.json  tsconfig.json
mft-web-ui-next/src/app/: layout.tsx  page.tsx
mft-web-ui-next/src/app/components/: Header.tsx
mft-web-ui-next/src/app/feeling/: page.tsx
mft-web-ui-next/src/app/food/ingredient/: page.tsx
mft-web-ui-next/src/app/food/meal/: page.tsx
mft-web-ui-next/src/app/user/: InputForm.tsx
mft-web-ui-next/src/app/user/login/: page.tsx
mft-web-ui-next/src/app/user/register/: page.tsx
mft-web-ui-yew/: Cargo.toml
mft-web-ui-yew/src/: app.rs  main.rs  router.rs
mft-web-ui-yew/src/api/: types.rs  user_api.rs
mft-web-ui-yew/src/components/: feeling_item.rs  header.rs
mft-web-ui-yew/src/pages/: feeling_page.rs  login_page.rs  mod.rs  profile_page.rs  register_page.rs
mft-web-ui/src/: main.rs
mft-web-ui/src/api/: api_request.rs  types.rs  user_api.rs
mft-web-ui/src/components/: form_input.rs
mft-web-ui/src/pages/: login_page.rs  profile_page.rs  register_page.rs
