[package]
name = "mft-web-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
mft-domain = { path = "../mft-domain" }
gloo-net = "0.3.1"
wasm-bindgen-futures = "0.4"
